--- a/public/html/postuser.html
+++ b/public/html/postuser.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Post User</h2>
-    <form action="/user" method="POST">
+    <form action="/user" method="POST" enctype="multipart/form-data">
         <div>
             <label>Name:</label>
             <input type="text" name="name">
@@ -16,6 +16,10 @@
         <div>
             <label>Email:</label>
             <input type="text" name="email">
+        </div>
+        <div>
+            <label>Image Profile</label>
+            <input type="file" name="img">
         </div>
         <button type="submit">Submit</button>
     </form>
